Change cache interface && Moved page caching from usecases to middleware
