# server/docs/swagger.json
@@ -700,7 +700,7 @@
                 }
             }
         },
-        "/personal/full-info/{personID}": {
+        "/staff/full-info/{personID}": {
             "get": {
                 "security": [
                     {
@@ -709,10 +709,10 @@
                 ],
                 "description": "Получение информации о личности по её ID",
                 "tags": [
-                    "personal"
+                    "staff"
                 ],
                 "summary": "Получение информации о личности",
-                "operationId": "kinopoisk-get-person-info",
+                "operationId": "kinopoisk-get-staff-info",
                 "parameters": [
                     {
                         "type": "integer",
@@ -997,7 +997,7 @@
             }
         },
         "entity.PersonFullMovie": {
-            "description": "person movies for person full info",
+            "description": "person movie for person full info",
             "type": "object",
             "properties": {
                 "id": {
